--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                     <h3><p><%= pergunta.titulo %></p></h3>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Responder</utton>
+                   <a href="/pergunta/<%= pergunta.id %>" ><button class="btn btn-primary">Responder</utton></a>
                 </div>
             </div>
 
